test/src/e2e_vm_tests/test_programs/should_fail/ref_variables/src/main.sw
script;

fn main() -> u32 {
    let ref mut b = 0u32;
    0
}
